app/globals.css
@import url("https://fonts.cdnfonts.com/css/cabinet-grotesk");
@import url("https://fonts.cdnfonts.com/css/satoshi");
@import "tailwindcss";

:root {
  --background: #f1f1f1;
  --foreground: #171717;

  --font-satoshi: "Satoshi", sans-serif;
  --font-cabinet: "Cabinet Grotesk", sans-serif;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

.dark {
  --background: #0a0a0a;
  --foreground: #edededf2;
}

body {
  @apply relative flex flex-col items-center justify-center min-h-screen;
  background: url('/bg-grid.svg') repeat center center fixed;
  color: var(--foreground);
  font-family: var(--font-cabinet);
  scroll-behavior: smooth;
}


.bg-overlay {
  @apply absolute inset-0 z-0 bg-gradient-to-b !from-foreground/97 !to-foreground/97 dark:!from-background/97 dark:!to-background/97;
}


html {
  overflow-x: hidden;
  min-width: 100%;
  scroll-behavior: smooth;
}

.hero-title {
  font-family: var(--font-satoshi);
}

